--- a/client/package.json
+++ b/client/package.json
@@ -57,6 +57,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.22.1",
