--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 jwtsecret=Secretkey
-sender=mhuzaif523@gmail.com
-apppass=quhd nbqs jbka ducq 
+sender=neweraprovider@gmail.com
+apppass=uxho jphd utxv udub 
