--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 jwtsecret=Secretkey
-sender=neweraprovider@gmail.com
-apppass=uxho jphd utxv udub 
+sender=mhuzaif523@gmail.com
+apppass=kjys benn dnon qmqn 
