--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "@coreui/coreui": "^4.3.0",
+    "@fullcalendar/daygrid": "^6.1.11",
+    "@fullcalendar/interaction": "^6.1.11",
+    "@fullcalendar/react": "^6.1.11",
+    "@fullcalendar/timegrid": "^6.1.11",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
