--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 jwtsecret=Secretkey
 sender=mhuzaif523@gmail.com
 apppass=kjys benn dnon qmqn 
+mongo_uri=mongodb+srv://karachilms:4.karachilms@userregistry.nyhdtbg.mongodb.net/?retryWrites=true&w=majority&appName=userregistry
