--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 jwtsecret=Secretkey
 sender=ahsanraza.kit@gmail.com
-apppass=zzeh iuaj snbx vhrb  
+apppass=zzeh iuaj snbx vhrb 
+mongo_uri=mongodb+srv://karachilms:4.karachilms@userregistry.nyhdtbg.mongodb.net/?retryWrites=true&w=majority&appName=userregistry
