--- a/client/package.json
+++ b/client/package.json
@@ -3,9 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/core": "^7.16.0",
-    "@coreui/coreui": "^4.3.0",
-    "@coreui/react": "^4.11.1",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fullcalendar/daygrid": "^6.1.11",
@@ -15,12 +12,6 @@
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.12",
     "@mui/styled-engine-sc": "^6.0.0-alpha.16",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
-    "@svgr/webpack": "^5.5.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "assert": "^2.1.0",
     "axios": "^1.6.7",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
@@ -42,17 +33,6 @@
     "html-webpack-plugin": "^5.5.0",
     "https-browserify": "^1.0.0",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.4.3",
-    "jest-resolve": "^27.4.2",
-    "jest-watch-typeahead": "^1.0.0",
-    "mini-css-extract-plugin": "^2.4.5",
-    "moment": "^2.30.1",
-    "postcss": "^8.4.4",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-loader": "^6.2.1",
-    "postcss-normalize": "^10.0.1",
-    "postcss-preset-env": "^7.0.1",
-    "prompts": "^2.4.2",
     "react": "^18.2.0",
     "react-app-polyfill": "^3.0.0",
     "react-bootstrap": "^2.10.1",
@@ -64,7 +44,6 @@
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "^5.0.1",
-    "react-sweetalert2": "^0.6.0",
     "recharts": "^2.12.2",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
@@ -72,7 +51,6 @@
     "scripts": "^0.1.0",
     "semver": "^7.3.5",
     "source-map-loader": "^3.0.0",
-    "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "style-loader": "^3.3.1",
     "styled-components": "^6.1.8",
@@ -84,6 +62,9 @@
     "webpack-dev-server": "^4.6.0",
     "webpack-manifest-plugin": "^4.0.2",
     "workbox-webpack-plugin": "^6.4.1"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "version"
   },
   "scripts": {
     "start": "react-scripts start",
