--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
+    "mime": "^4.0.3",
     "moment": "^2.30.1",
     "mongoose": "^8.1.3",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.12",
     "nodemon": "^3.0.3"
   }
