--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ jwtsecret=Secretkey
 sender=ahsanraza.kit@gmail.com
 apppass=zzeh iuaj snbx vhrb 
 mongo_uri=mongodb+srv://karachilms:4.karachilms@userregistry.nyhdtbg.mongodb.net/?retryWrites=true&w=majority&appName=userregistry
+BLOB_READ_WRITE_TOKEN="vercel_blob_rw_4tdwVEkDJ2YPoiEi_tIrny9IkiU4HOXvWhqowHqw8zZvCDV"
