--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ sender=ahsanraza.kit@gmail.com
 apppass=zzeh iuaj snbx vhrb 
 # mongo_uri=mongodb+srv://karachilms:4.karachilms@userregistry.nyhdtbg.mongodb.net/?retryWrites=true&w=majority&appName=userregistry
 mongo_uri=mongodb+srv://ahsanrazakit:iLsfKhXiFt9QCXsf@fornow.52xdciq.mongodb.net/?retryWrites=true&w=majority&appName=fornow
-BLOB_READ_WRITE_TOKEN="vercel_blob_rw_4tdwVEkDJ2YPoiEi_tIrny9IkiU4HOXvWhqowHqw8zZvCDV"
+# BLOB_READ_WRITE_TOKEN="vercel_blob_rw_4tdwVEkDJ2YPoiEi_tIrny9IkiU4HOXvWhqowHqw8zZvCDV"
