--- a/client/package.json
+++ b/client/package.json
@@ -5,10 +5,6 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
-    "@fullcalendar/daygrid": "^6.1.11",
-    "@fullcalendar/interaction": "^6.1.11",
-    "@fullcalendar/react": "^6.1.11",
-    "@fullcalendar/timegrid": "^6.1.11",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.12",
     "@mui/styled-engine-sc": "^6.0.0-alpha.16",
@@ -17,10 +13,9 @@
     "babel-loader": "^8.2.3",
     "babel-plugin-named-asset-import": "^0.3.8",
     "babel-preset-react-app": "^10.0.1",
-    "bfj": "^7.0.2",
     "bootstrap": "^5.3.3",
-    "browserify-zlib": "^0.2.0",
     "browserslist": "^4.18.1",
+    "buffer": "^6.0.3",
     "camelcase": "^6.2.1",
     "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "css-loader": "^6.5.1",
@@ -44,14 +39,12 @@
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "^5.0.1",
-    "recharts": "^2.12.2",
     "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
     "sass-loader": "^12.3.0",
     "scripts": "^0.1.0",
     "semver": "^7.3.5",
     "source-map-loader": "^3.0.0",
-    "stream-http": "^3.2.0",
     "style-loader": "^3.3.1",
     "styled-components": "^6.1.8",
     "terser-webpack-plugin": "^5.2.5",
@@ -65,7 +58,8 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "version"
+    "@babel/plugin-proposal-private-property-in-object": "version",
+    "webpack-cli": "^5.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
