--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@vercel/blob": "^0.23.3",
     "bcrypt": "^5.1.1",
+    "bull": "^4.15.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
